testing/comparison-cases/istio-bookinfo/non-equivalent/policies-a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-details-to-reviews-9080
  namespace: bookinfo-services-ns
spec:
  podSelector:
    matchLabels:
      app: reviews
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: details
    ports:
    - protocol: TCP
      port: 9080
